examples/test/testpolicy8891.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8891
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key27: value16
      key36: value32
      key40: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value48
      podSelector:
        matchLabels:
          key38: value29
